Fix for iOS overflow

--- a/style.css
+++ b/style.css
@@ -114,6 +114,8 @@ html, body {
   margin: 0px;
   padding: 0px;
   overflow: hidden;
+  position: relative;
+  height: 100%;
 } 
 
 .message{
